@@ -5,12 +5,11 @@
  */
 package io.github.frikit.krandom.generator.user;
 
+import io.github.frikit.krandom.generator.DataRegistryContext;
 import io.github.frikit.krandom.generator.locale.SupportedLocale;
 import org.jspecify.annotations.Nullable;
 
-import java.util.Collections;
 import java.util.Locale;
-import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -21,7 +20,7 @@ import java.util.concurrent.ConcurrentHashMap;
  * {@link io.github.frikit.krandom.generator.locale.SupportedLocale} that has a
  * {@code krandom/chinese_zodiac/<locale>.txt} resource. Locales without a file fall back to the
  * bundled default (English) names. Custom providers can be added via
- * {@link #register(ChineseZodiacDataProvider)}.
+ * {@link io.github.frikit.krandom.generator.DataRegistryContext.Builder}.
  *
  * <p><b>Lookup order:</b> exact {@code language_COUNTRY} match, then language-only match, then
  * {@code null}.
@@ -34,23 +33,13 @@ public final class ChineseZodiacDataRegistry {
     static {
         for (SupportedLocale supportedLocale : SupportedLocale.values()) {
             String path = "krandom/chinese_zodiac/" + supportedLocale.resourcePrefix() + ".txt";
-            if (ChineseZodiacDataRegistry.class.getClassLoader().getResource(path) != null) {
+            if (ChineseZodiacDataRegistry.class.getResource("/" + path) != null) {
                 putProvider(new BuiltInChineseZodiacDataProvider(supportedLocale));
             }
         }
     }
 
     private ChineseZodiacDataRegistry() {
-    }
-
-    /**
-     * Registers a custom Chinese zodiac data provider, replacing any provider for the same locale key.
-     *
-     * @param provider the provider to register; must not be {@code null}
-     */
-    public static void register(ChineseZodiacDataProvider provider) {
-        Objects.requireNonNull(provider, "provider");
-        putProvider(provider);
     }
 
     /**
@@ -90,17 +79,13 @@ public final class ChineseZodiacDataRegistry {
      * Returns an unmodifiable snapshot of all currently registered locale keys.
      */
     public static Set<String> registeredKeys() {
-        return Collections.unmodifiableSet(REGISTRY.keySet());
+        return Set.copyOf(REGISTRY.keySet());
     }
 
     private static void putProvider(ChineseZodiacDataProvider provider) {
         String lang = provider.getLocale().getLanguage();
         String country = provider.getLocale().getCountry();
-        if (country.isEmpty()) {
-            REGISTRY.put(lang, provider);
-        } else {
-            REGISTRY.put(lang + "_" + country, provider);
+        REGISTRY.put(lang + "_" + country, provider);
             REGISTRY.putIfAbsent(lang, provider);
-        }
     }
 }
