@@ -8,7 +8,6 @@ package io.github.frikit.krandom.generator.user;
 import io.github.frikit.krandom.generator.locale.SupportedLocale;
 import org.jspecify.annotations.Nullable;
 
-import java.util.Collections;
 import java.util.Locale;
 import java.util.Objects;
 import java.util.Set;
@@ -19,7 +18,7 @@ import java.util.concurrent.ConcurrentHashMap;
  *
  * <p>Pre-seeded at class-load time with every built-in locale from
  * {@link io.github.frikit.krandom.generator.locale.SupportedLocale}. Custom providers can be added at
- * any time via {@link #register(TitleDataProvider)}, replacing any existing provider for the same
+ * any time via {@link io.github.frikit.krandom.generator.DataRegistryContext.Builder}, replacing any existing provider for the same
  * locale key.
  *
  * <p><b>Lookup order</b>
@@ -48,25 +47,6 @@ public final class TitleDataRegistry {
     }
 
     private TitleDataRegistry() {
-    }
-
-    /**
-     * Registers a custom title data provider, making it available to {@link TitleGenerator}.
-     *
-     * <p>If a provider already exists for the same exact locale key, it is replaced. A
-     * language-only key (e.g. {@code "en"}) is set only when no prior entry exists for that
-     * language — meaning the first registration for a language becomes its language-level fallback.
-     * To explicitly override the language-level fallback, register a provider whose
-     * {@link TitleDataProvider#getLocale()} has no country component (e.g.
-     * {@code Locale.of("en")}).
-     *
-     * @param provider the provider to register; must not be {@code null}, and
-     *                 {@link TitleDataProvider#getLocale()} must not be {@code null}
-     */
-    public static void register(TitleDataProvider provider) {
-        Objects.requireNonNull(provider, "provider");
-        validateProvider(provider);
-        putProvider(provider);
     }
 
     /**
@@ -104,7 +84,7 @@ public final class TitleDataRegistry {
      * string (e.g. {@code "en_US"}).
      */
     public static Set<String> registeredKeys() {
-        return Collections.unmodifiableSet(REGISTRY.keySet());
+        return Set.copyOf(REGISTRY.keySet());
     }
 
     /**
@@ -118,31 +98,10 @@ public final class TitleDataRegistry {
     private static void putProvider(TitleDataProvider provider) {
         String lang = provider.getLocale().getLanguage();
         String country = provider.getLocale().getCountry();
-        if (country.isEmpty()) {
-            // Explicit language-only registration — replaces the language fallback.
-            REGISTRY.put(lang, provider);
-        } else {
-            REGISTRY.put(lang + "_" + country, provider);
-            // First registration for this language becomes the language-level fallback.
-            REGISTRY.putIfAbsent(lang, provider);
-        }
+        REGISTRY.put(lang + "_" + country, provider);
+        // First registration for this language becomes the language-level fallback.
+        REGISTRY.putIfAbsent(lang, provider);
     }
 
-    private static void validateProvider(TitleDataProvider provider) {
-        Objects.requireNonNull(provider.getLocale(), "provider.getLocale()");
-        validateArray("titles", provider.getTitles());
-    }
 
-    private static void validateArray(String name, String[] values) {
-        Objects.requireNonNull(values, name);
-        if (values.length == 0) {
-            throw new IllegalArgumentException(name + " must not be empty");
-        }
-        for (int i = 0; i < values.length; i++) {
-            String value = values[i];
-            if (value == null || value.isBlank()) {
-                throw new IllegalArgumentException(name + " at index " + i + " must not be blank");
-            }
-        }
-    }
 }
