@@ -5,12 +5,11 @@
  */
 package io.github.frikit.krandom.generator.user;
 
+import io.github.frikit.krandom.generator.DataRegistryContext;
 import io.github.frikit.krandom.generator.locale.SupportedLocale;
 import org.jspecify.annotations.Nullable;
 
-import java.util.Collections;
 import java.util.Locale;
-import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -21,7 +20,7 @@ import java.util.concurrent.ConcurrentHashMap;
  * {@link io.github.frikit.krandom.generator.locale.SupportedLocale} that <em>has</em> a
  * {@code krandom/zodiac/<locale>.txt} resource. Locales without a file are intentionally not
  * registered, so {@link ZodiacGenerator} falls back to the bundled default (English) names. Custom
- * providers can be added at any time via {@link #register(ZodiacDataProvider)}.
+ * providers can be added at any time via {@link io.github.frikit.krandom.generator.DataRegistryContext.Builder}.
  *
  * <p><b>Lookup order:</b> exact {@code language_COUNTRY} match, then language-only match, then
  * {@code null} (the caller handles the missing case).
@@ -34,23 +33,13 @@ public final class ZodiacDataRegistry {
     static {
         for (SupportedLocale supportedLocale : SupportedLocale.values()) {
             String path = "krandom/zodiac/" + supportedLocale.resourcePrefix() + ".txt";
-            if (ZodiacDataRegistry.class.getClassLoader().getResource(path) != null) {
+            if (ZodiacDataRegistry.class.getResource("/" + path) != null) {
                 putProvider(new BuiltInZodiacDataProvider(supportedLocale));
             }
         }
     }
 
     private ZodiacDataRegistry() {
-    }
-
-    /**
-     * Registers a custom zodiac data provider, replacing any provider for the same locale key.
-     *
-     * @param provider the provider to register; must not be {@code null}
-     */
-    public static void register(ZodiacDataProvider provider) {
-        Objects.requireNonNull(provider, "provider");
-        putProvider(provider);
     }
 
     /**
@@ -90,17 +79,13 @@ public final class ZodiacDataRegistry {
      * Returns an unmodifiable snapshot of all currently registered locale keys.
      */
     public static Set<String> registeredKeys() {
-        return Collections.unmodifiableSet(REGISTRY.keySet());
+        return Set.copyOf(REGISTRY.keySet());
     }
 
     private static void putProvider(ZodiacDataProvider provider) {
         String lang = provider.getLocale().getLanguage();
         String country = provider.getLocale().getCountry();
-        if (country.isEmpty()) {
-            REGISTRY.put(lang, provider);
-        } else {
-            REGISTRY.put(lang + "_" + country, provider);
+        REGISTRY.put(lang + "_" + country, provider);
             REGISTRY.putIfAbsent(lang, provider);
-        }
     }
 }
