@@ -7,7 +7,6 @@ package io.github.frikit.krandom.generator.user.nationalid;
 
 import org.jspecify.annotations.Nullable;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
@@ -19,7 +18,7 @@ import java.util.concurrent.ConcurrentHashMap;
  *
  * <p>Pre-seeded at class-load time with every locale in
  * {@link io.github.frikit.krandom.generator.locale.SupportedLocale}. Custom providers can be added at
- * any time via {@link #register(NationalIdProvider)}, replacing any existing provider for the same
+ * any time via {@link io.github.frikit.krandom.generator.DataRegistryContext.Builder}, replacing any existing provider for the same
  * locale key.
  *
  * <p><b>Lookup order</b>
@@ -85,32 +84,6 @@ public final class NationalIdRegistry {
     }
 
     /**
-     * Registers a custom national ID provider, making it available to {@link NationalIdGenerator}.
-     *
-     * <p>If a provider already exists for the same exact locale key, it is replaced. A
-     * language-only key (e.g. {@code "en"}) is set only when no prior entry exists for that
-     * language — meaning the first registration for a language becomes its language-level fallback.
-     * To explicitly override the language-level fallback, register a provider whose
-     * {@link NationalIdProvider#getLocale()} has no country component (e.g.
-     * {@code Locale.of("en")}).
-     *
-     * @param provider the provider to register; must not be {@code null}, and
-     *                 {@link NationalIdProvider#getLocale()} must not be {@code null}
-     */
-    public static void register(NationalIdProvider provider) {
-        Objects.requireNonNull(provider, "provider");
-        Objects.requireNonNull(provider.getLocale(), "provider.getLocale()");
-        String lang = provider.getLocale().getLanguage();
-        String country = provider.getLocale().getCountry();
-        if (country.isEmpty()) {
-            REGISTRY.put(lang, provider);
-        } else {
-            REGISTRY.put(lang + "_" + country, provider);
-            REGISTRY.putIfAbsent(lang, provider);
-        }
-    }
-
-    /**
      * Returns {@code true} if the registry contains an entry for the given locale (exact
      * {@code language_COUNTRY} match or language-only match).
      */
@@ -145,7 +118,7 @@ public final class NationalIdRegistry {
      * string (e.g. {@code "en_US"}).
      */
     public static Set<String> registeredKeys() {
-        return Collections.unmodifiableSet(REGISTRY.keySet());
+        return Set.copyOf(REGISTRY.keySet());
     }
 
     /**
